# booking-system-backend

./: .env.example  Makefile  README.md  create_admin.py  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0c3d2f2b2565_add_booking_system_and_accommodation_.py  13b4e43ed9dc_add_inventory_and_custom_items_tables_.py  85ab4b44e7e0_add_client_and_client_group_tables.py  9a16e5cfda3a_initial_migration.py  b10f24e7190b_add_search_performance_indexes.py
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: accommodation_types.py  accommodations.py  auth.py  batch.py  bookings.py  clients.py  custom_items.py  inventory_items.py  inventory_types.py
app/core/: auth_deps.py  batch_processor.py  common_deps.py  config.py  database.py  exception_handlers.py  exceptions.py  pagination.py  query_builders.py  security.py  service_deps.py  service_utils.py
app/models/: __init__.py  accommodation.py  base.py  booking.py  client.py  custom_item.py  inventory.py  user.py
app/schemas/: __init__.py  accommodation.py  batch.py  booking.py  client.py  custom_item.py  inventory.py  responses.py  search.py  user.py
app/services/: __init__.py  accommodation_service.py  auth_service.py  batch_service.py  booking_service.py  calendar_service.py  client_service.py  custom_item_service.py  inventory_service.py
app/streamlit_pages/: 01_Dashboard.py
app/streamlit_pages/components/: auth.py
app/streamlit_pages/pages/: 02_Accommodations.py  03_Clients.py  04_Bookings.py
